<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_timeline"
        android:icon="@drawable/ic_timeline"
        android:title="@string/title_timeline"/>

    <item
        android:id="@+id/navigation_users"
        android:icon="@drawable/ic_users_black"
        android:title="@string/users" />

    <item
        android:id="@+id/navigation_panicBtn"
        android:icon="@drawable/ic_panic_button"
        android:title="@string/title_panicBtn"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/title_notifications"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile"/>


</menu>