<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_timeline">

    <fragment
        android:id="@+id/navigation_timeline"
        android:name="com.example.healthia.TimelineFragment"
        android:label="@string/title_timeline"
        tools:layout="@layout/fragment_timeline"/>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.healthia.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search"/>

    <fragment
        android:id="@+id/navigation_panicBtn"
        android:name="com.example.healthia.PanicButtonFragment"
        android:label="@string/title_panicBtn"
        tools:layout="@layout/fragment_panic_button"/>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.healthia.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"/>
</navigation>